--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,37 @@
-*{ 
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
- }html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p{
+* {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
 }
-html, body {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+}
+html,
+body {
   margin: 0;
   padding: 0;
   cursor: none;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 .test1 {
@@ -24,18 +40,32 @@ ol, ul {
   text-align: center;
 }
 .test1 span {
-  background-image: linear-gradient(to right bottom, #abdafb, #9fc6fd, #a8aef8, #be90e6, #d66ec4, #d757b6, #d83ca6, #d80594, #c500a5, #a900b9, #7e0ecc, #1d29df);
+  background-image: linear-gradient(
+    to right bottom,
+    #abdafb,
+    #9fc6fd,
+    #a8aef8,
+    #be90e6,
+    #d66ec4,
+    #d757b6,
+    #d83ca6,
+    #d80594,
+    #c500a5,
+    #a900b9,
+    #7e0ecc,
+    #1d29df
+  );
   text-transform: uppercase;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: changeColor 1s linear 0s infinite alternate;
+  animation: changeColor 5s linear 0s infinite alternate;
   position: relative;
 }
 .test1 span:nth-child(4) {
   animation-delay: 0s;
 }
 .test1 span:nth-child(3) {
-  animation-delay: .5s;
+  animation-delay: 0.5s;
 }
 .test1 span:nth-child(2) {
   animation-delay: 1s;
@@ -112,25 +142,38 @@ ol, ul {
   }
 }
 
-
 .test2 {
   font-size: 10px;
   font-weight: 900;
   text-align: center;
 }
 .test2 span {
-  background-image: linear-gradient(to right bottom, #b8ebd0, #b6dfaf, #c0d08c, #cfbd6e, #e1a75b, #e28c5b, #db7261, #cd5b6c, #a24871, #713b6b, #402f5a, #132140);
+  background-image: linear-gradient(
+    to right bottom,
+    #b8ebd0,
+    #b6dfaf,
+    #c0d08c,
+    #cfbd6e,
+    #e1a75b,
+    #e28c5b,
+    #db7261,
+    #cd5b6c,
+    #a24871,
+    #713b6b,
+    #402f5a,
+    #132140
+  );
   text-transform: uppercase;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: changeColor2 1s linear 0s infinite alternate;
+  animation: changeColor2 5s linear 0s infinite alternate;
   position: relative;
 }
 .test2 span:nth-child(4) {
   animation-delay: 0s;
 }
 .test2 span:nth-child(3) {
-  animation-delay: .5s;
+  animation-delay: 0.5s;
 }
 .test2 span:nth-child(2) {
   animation-delay: 1s;
@@ -209,7 +252,7 @@ ol, ul {
 
 /* text */
 .text_animation {
-  background: black;
+  background: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -244,29 +287,43 @@ ol, ul {
   animation-delay: -6s;
 }
 @keyframes appear {
-  0%, 5%, 100% {
+  0%,
+  5%,
+  100% {
     filter: blur(0px);
     opacity: 1;
   }
-  35%, 80% {
+  35%,
+  80% {
     filter: blur(100px);
     opacity: 0;
   }
 }
-.all{
-  position: relative;
-}
-.name{
+.name {
   position: absolute;
   top: 0;
 }
 
-
-
+nav a {
+  animation: fly 2s linear 0s infinite alternate;
+}
+nav a:nth-child(1) {
+  animation-delay: 0s;
+}
+nav a:nth-child(1) {
+  animation-delay: 0.5s;
+}
+nav a:nth-child(3) {
+  animation-delay: 1s;
+}
 .nav-wrapper {
   width: 100%;
   height: 100vh;
-  background: #161616;
+  background: url("../img/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
 }
 
 nav {
@@ -295,11 +352,11 @@ span {
 .cursor {
   pointer-events: none;
   position: fixed;
-  padding: 0.3rem;
+  padding: 0.4rem;
   background-color: #fff;
   border-radius: 50%;
   mix-blend-mode: difference;
-  animation: zoom 1s linear 0s infinite alternate;
+  animation: zoom 1.5s linear 0s infinite alternate;
   transition: transform 0.3s ease;
 }
 
@@ -307,36 +364,156 @@ span {
   transform: translate(-50%, -50%) scale(8);
   animation: none;
 }
-a:hover{
+a:hover {
   cursor: none;
-  color: red
+  color: red;
 }
 
-
-@media(min-width: 900px) {
+@media (min-width: 900px) {
   nav {
-        display: flex;
-        justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
   }
 }
 
-@media(max-width: 900px) {
+@media (max-width: 900px) {
   nav {
-        top: 30%;
+    top: 30%;
   }
 
   .hover-this {
-        width: 100%;
-        padding: 20px 0;
-        display: inline-block;
+    width: 100%;
+    padding: 20px 0;
+    display: inline-block;
   }
 }
 @keyframes zoom {
-  0%, 5%, 100% {
+  0% {
     padding: 0.3rem;
   }
-  35%, 80% {
-   padding: .6rem;
+  25% {
+    padding: 0.4rem;
   }
+  50% {
+    padding: 0.5rem;
+  }
+  75% {
+    padding: 0.4rem;
+  }
+  100% {
+    padding: 0.3rem;
+  }
+}
+
+@keyframes fly {
+  0% {
+    transform: translateY(10px);
+  }
+}
+
+.nav-wrapper .img_animation {
+  position: absolute;
+  object-fit: contain;
+}
+.nav-wrapper .img_animation:nth-child(1) {
+  height: 100px;
+  width: 100px;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  filter: drop-shadow(5px 5px 20px rgb(195, 208, 84));
+  animation: fall 2.5s linear 3s infinite;
+}
+@keyframes fall {
+  0% {
+    top: 0;
+    left: 0;
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    top: 80%;
+    left: 45%;
+    opacity: 0;
+  }
+}
+
+.nav-wrapper .img_animation:nth-child(2) {
+  height: 100px;
+  width: 100px;
+  top: 0;
+  right: 0;
+  filter: drop-shadow(5px 5px 20px rgb(238, 98, 66));
+  animation: fall2 3s linear 9s infinite;
+  opacity: 0;
+  transform: rotate(90deg);
+}
+@keyframes fall2 {
+  0% {
+    top: 0;
+    right: 0;
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    top: 90%;
+    right: 45%;
+    opacity: 0;
+  }
+}
+
+.nav-wrapper .img_animation:nth-child(3) {
+  height: 150px;
+  width: 150px;
+  top: 0;
+  filter: drop-shadow(5px 5px 20px rgb(226, 230, 192));
+  animation: fall3 2s linear 1s infinite;
+  opacity: 0;
+  transform: rotate(65deg) scale(1);
+  left: 50%;
+}
+@keyframes fall3 {
+  0% {
+    top: 0;
+    opacity: 0;
+    transform:rotate(65deg) scale(1);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    top: 75%;
+    opacity: 0;
+    transform:rotate(65deg) scale(.2);
+  }
+}
+.nav-wrapper .img_animation:nth-child(4) {
+  overflow: hidden;
+  height: 150px;
+  width: 150px;
+  top: 20%;
+  filter: drop-shadow(5px 5px 20px rgb(213, 216, 228));
+  animation: fall4 2s linear 6s infinite;
+  opacity: 0;
+  transform: rotate(80deg) scale(1);
+  left: 30%;
+}
+@keyframes fall4 {
+  0% {
+    top: 0;
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    top: 90%;
+    left: 10%;
+    opacity: 0;
+    transform:rotate(65deg) scale(.2);
   }
 }
